--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script async="" src="//www.google-analytics.com/analytics.js"></script>
   <script type="application/ld+json">{"itemListElement":[{"item":{"@id":"https:\/\/itch.io\/games","name":"Games"},"@type":"ListItem","position":1},{"item":{"@id":"https:\/\/itch.io\/games\/free","name":"Free"},"@type":"ListItem","position":2}],"@type":"BreadcrumbList","@context":"http:\/\/schema.org"}</script>
   <script type="application/ld+json">{"@type":"Product","@context":"http:\/\/schema.org\/","name":"The Mozi"}</script>
-  <title>The Mozi by Hansamas</title>
+  <title>The Mozi</title>
   <meta value="IjJMMjNTcnpmUzJKVm9wOCBVUiBCVVRUIGRyeTBTOTZtU3pVa3M0ZiI=.kgUT3a5RWBCqGZNfF4FGmr1coc4=" name="csrf_token">
   <link href="https://static.itch.io/game.css?1652314858" rel="stylesheet">
   <script type="text/javascript">window.itchio_translations_url = 'https://static.itch.io/translations';</script>
