--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ You must restore balance in the world by climbing the Archmage's tower, switchin
 <h2 id="download">Download</h2>
 <div class="upload_list_widget">
 <div class="upload">
-<a href="https://cdn.discordapp.com/attachments/1012147769684807742/1012788564695711764/TheMozi.rar" download>
+<a href="https://cdn.discordapp.com/attachments/1008724813721915482/1016044456337743892/TheMozi.zip" download>
 <button> Download
 </button></a>
   <style>
